--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: post-index
-title: Latest Updates 
-description: "Describe this nonsense."
-tags: [Jekyll, theme, themes, responsive, blog, modern]
+title: Latest Updates
+description: "Description go here"
+tags: [android, app, organizer]
 image:
   feature: abstract-1.jpg
   credit: dargadgetz
