--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: post-index
-title: Latest Updates
+title: Stuff (this is the 'title' attribute)
 description: "Description go here"
 tags: [android, app, organizer]
 image:
